<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_blue"
    tools:context=".ui.LoginFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="180dp"
        android:layout_height="60dp"
        android:background="@drawable/logo_no_background_svg"
        android:backgroundTint="@color/dark_blue"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".18" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".26" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent=".92" />

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:letterSpacing=".03"
            android:text="@string/login_title"
            android:textSize="22sp"
            android:textStyle="bold"
            android:textColor="@color/gray"
            tools:targetApi="p" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField1"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:elevation="18dp"
            app:errorEnabled="true"
            app:boxStrokeWidth="2dp"
            android:hint="@string/enter_the_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:textColor="@color/gray"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/filledTextField2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="18dp"
            app:errorEnabled="true"
            app:boxStrokeWidth="2dp"
            app:endIconMode="password_toggle"
            android:hint="@string/enter_the_pass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:imeOptions="actionDone"
                android:maxLength="8"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@drawable/bg_button"
            app:backgroundTint="@color/dark_blue"
            android:paddingVertical="14dp"
            android:text="@string/log_in_str"
            android:textColor="@color/white"
            android:paddingHorizontal="6dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_sign_up_1"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/goto_sign_up"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/goto_sign_up"
            android:layout_marginStart="8dp"
            android:textStyle="bold"
            android:textColor="@color/dark_blue"
            android:textSize="14sp"
            />


    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>