<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="8dp"
    app:cardBackgroundColor="@color/gray_blue"
    app:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingHorizontal="16dp">

        <ImageView
            android:id="@+id/close"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_close"
            app:layout_constraintBottom_toBottomOf="@+id/textView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent=".12" />


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="@color/gray"
            android:layout_marginBottom="50dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="2dp"
                    android:text="@string/current_account"
                    android:paddingStart="20dp"
                    android:paddingVertical="8dp"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/constraintLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingVertical="6dp"
                    android:paddingHorizontal="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/account"
                        android:layout_width="38dp"
                        android:layout_height="38dp"
                        android:layout_alignParentEnd="true"
                        android:background="@drawable/ic_circle"
                        android:backgroundTint="@color/yellow"
                        android:gravity="center"
                        android:padding="0dp"
                        android:paddingBottom="4dp"
                        android:text="A"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:orientation="vertical"

                        android:paddingStart="12dp"
                        android:paddingEnd="10dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/account"
                        app:layout_constraintTop_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent">

                        <TextView
                            android:id="@+id/name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:paddingTop="2dp"
                            android:text="date"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/email"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="date"
                            android:textColor="@color/white_blue"
                            android:textSize="12sp" />
                    </LinearLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#A8C3C3C3"
                    android:layout_marginTop="12dp"
                    />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/login_list_view"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:visibility="visible"
                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
                    tools:layout_editor_absoluteX="16dp"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:listitem="@layout/layout_account_item"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:background="#A8C3C3C3"
                    android:layout_marginTop="12dp"
                    />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/add_user_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="22dp"
                    android:paddingVertical="12dp"
                    >

                    <ImageView
                        android:id="@+id/imageView2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:padding="4dp"
                        android:src="@drawable/ic_person_add"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_account"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:paddingStart="14dp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
                        app:layout_constraintStart_toEndOf="@+id/imageView2"
                        app:layout_constraintTop_toTopOf="@+id/imageView2" />

                </androidx.constraintlayout.widget.ConstraintLayout>


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>